fixed issue with double tap zoom on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,9 @@
 
 @import "~bootswatch/dist/cosmo/bootswatch";
 
-
+body {
+    touch-action: manipulation !important;
+}
 
 .selectedGrey {
     background-color: gray !important;
